--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -9,11 +9,11 @@ on:
       server_url:
         description: 'Server URL (e.g. https://your-site.com)'
         required: true
-        default: 'https://ednovas.video'
+        default: 'http://192.168.100.3:7023'
       app_name:
         description: 'App Name'
         required: true
-        default: 'E视界'
+        default: 'OmniBox'
       version_tag:
         description: 'Version Tag (e.g. v1.0.0)'
         required: true
@@ -206,13 +206,13 @@ jobs:
       - name: Rename APK with version
         run: |
           mv android/app/build/outputs/apk/release/app-release.apk \
-             android/app/build/outputs/apk/release/E视界-${{ steps.version.outputs.VERSION }}-universal.apk || \
+             android/app/build/outputs/apk/release/OmniBox-${{ steps.version.outputs.VERSION }}-universal.apk || \
           echo "APK rename skipped"
 
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: E视界-apk
+          name: OmniBox-apk
           path: android/app/build/outputs/apk/release/*.apk
           retention-days: 30
 
@@ -220,15 +220,15 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: ${{ steps.version.outputs.VERSION }}
-          name: "E视界 ${{ steps.version.outputs.VERSION }}"
+          name: "OmniBox ${{ steps.version.outputs.VERSION }}"
           body: |
-            ## 📦 E视界 ${{ steps.version.outputs.VERSION }}
+            ## 📦 OmniBox ${{ steps.version.outputs.VERSION }}
             
             ### 📱 Android APK 下载
             
             | 文件 | 说明 |
             |------|------|
-            | `E视界-${{ steps.version.outputs.VERSION }}-universal.apk` | 通用版 (支持所有设备) |
+            | `OmniBox-${{ steps.version.outputs.VERSION }}-universal.apk` | 通用版 (支持所有设备) |
             
             ### 🖥️ 支持的 CPU 架构
             - ✅ `armeabi-v7a` (ARM 32位 - 旧手机/盒子)
