--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,9 +1,9 @@
 ﻿{
     "appId": "com.ednovas.donguatv",
-    "appName": "E视界",
+    "appName": "OmniBox",
     "webDir": "public",
     "server": {
-        "url": "https://ednovas.video",
+        "url": "http://192.168.100.3:702",
         "cleartext": true
     },
     "plugins": {
@@ -13,4 +13,5 @@
             "backgroundColor": "#000000"
         }
     }
+
 }
